# comms

./: .gitignore  Readme.md  build_all.py  build_boost.py  build_comms.py  build_core.py  build_coretest.py  build_googletest.py  build_pdcurses.py  build_simulator.py  build_util.py  cfg_build.py
all/: CMakeLists.txt
boost/cmake/: CMakeLists.txt
boost/cmake/filesystem/: CMakeLists.txt
boost/cmake/program_options/: CMakeLists.txt
boost/cmake/system/: CMakeLists.txt
cmake/: common.cmake  compiler.cmake  configboost.cmake
comms/cmake/: CMakeLists.txt
comms/include/: Comms.hpp  CommsPredeclare.hpp  comms.hpp
comms/include/Qcom/: Qcom.hpp  QcomBetMeters.hpp  QcomBroadcast.hpp  QcomBroadcastSeek.hpp  QcomCashOutRequest.hpp  QcomCashTOReqAck.hpp  QcomCashTicketInRequestAck.hpp  QcomCashTicketOutRequestAck.hpp  QcomECTFromEGMRequest.hpp  QcomECTLockupReset.hpp  QcomECTToEGM.hpp  QcomEgmConfig.hpp  QcomEgmConfigReq.hpp  QcomEgmGeneralMaintenance.hpp  QcomEgmParameters.hpp  QcomEvent.hpp  QcomExtJPInfo.hpp  QcomGameConfig.hpp  QcomGameConfigChange.hpp  QcomGameConfigReq.hpp  QcomGeneralReset.hpp  QcomGeneralStatus.hpp  QcomHTPMaintenance.hpp  QcomLPAwardAck.hpp  QcomMeterGroupContribution.hpp  QcomMultiGameVarMeters.hpp  QcomNoteAcceptorMaintenance.hpp  QcomPlayerChoiceMeters.hpp  QcomProgramHashRequest.hpp  QcomProgressiveConfig.hpp  QcomProgressiveMeters.hpp  QcomPurgeEvents.hpp  QcomRequestAllLoggedEvents.hpp  QcomSPAM.hpp  QcomSystemLockupRequest.hpp  QcomTowerLightMaintenance.hpp
comms/include/Qcom/qogr/: qogr_crc.h  qogr_qcom.h
comms/include/qcom/: QcomBroadcast.hpp  QcomBroadcastSeek.hpp  QcomEgmConfig.hpp  QcomEgmConfigReq.hpp  QcomGameConfig.hpp  QcomGeneralStatus.hpp  QcomInline.h  qcom.hpp  qcom_egm_config.hpp  qcom_general_status.hpp
comms/include/qcom/qogr/: qogr_qcom.h
comms/src/: Comms.cpp  comms.cpp
comms/src/Qcom/: Qcom.cpp  QcomBetMeters.cpp  QcomBroadcast.cpp  QcomBroadcastSeek.cpp  QcomCashOutRequest.cpp  QcomCashTOReqAck.cpp  QcomCashTicketInRequestAck.cpp  QcomCashTicketOutRequestAck.cpp  QcomECTFromEGMRequest.cpp  QcomECTLockupReset.cpp  QcomECTToEGM.cpp  QcomEgmConfig.cpp  QcomEgmConfigReq.cpp  QcomEgmGeneralMaintenance.cpp  QcomEgmParameters.cpp  QcomEvent.cpp  QcomExtJPInfo.cpp  QcomGameConfig.cpp  QcomGameConfigChange.cpp  QcomGameConfigReq.cpp  QcomGeneralReset.cpp  QcomGeneralStatus.cpp  QcomHTPMaintenance.cpp  QcomLPAwardAck.cpp  QcomMeterGroupContribution.cpp  QcomMultiGameVarMeters.cpp  QcomNoteAcceptorMaintenance.cpp  QcomPlayerChoiceMeters.cpp  QcomProgramHashRequest.cpp  QcomProgressiveConfig.cpp  QcomProgressiveMeters.cpp  QcomPurgeEvents.cpp  QcomRequestAllLoggedEvents.cpp  QcomSPAM.cpp  QcomSystemLockupRequest.cpp  QcomTowerLightMaintenance.cpp
comms/src/qcom/: QcomBroadcast.cpp  QcomBroadcastSeek.cpp  QcomEgmConfig.cpp  QcomEgmConfigReq.cpp  QcomGameConfig.cpp  QcomGeneralStatus.cpp  qcom.cpp
core/cmake/: CMakeLists.txt
core/include/: BaseConverter.hpp  BaseInteger.hpp  Concatenate.hpp  Config.hpp  Console.hpp  Core.hpp  Singleton.hpp  Timer.hpp  Types.hpp  Utils.hpp  Window.hpp  core_config.hpp  core_console.hpp  core_debug.hpp  core_singleton.hpp  core_timer.hpp  core_types.hpp  core_window.hpp
core/include/Console/: ConsolePrinter.hpp  ConsoleProgressbar.hpp  ConsoleStream.hpp  ConsoleTable.hpp  ConsoleWindow.hpp
core/include/console/: ConsolePrinter.hpp  ConsoleStream.hpp  ConsoleTable.hpp  ConsoleWindow.hpp  core_console_progress_bar.hpp  core_console_table.hpp  core_console_window.hpp
core/src/: Concatenate.cpp  Console.cpp  Core.cpp  Timer.cpp  Utils.cpp  core.cpp  core_console.cpp  core_debug.cpp
core/src/Console/: ConsolePrinter.cpp  ConsoleProgressbar.cpp  ConsoleStream.cpp  ConsoleTable.cpp  ConsoleWindow.cpp
core/src/console/: ConsolePrinter.cpp  ConsoleProgressbar.cpp  ConsoleStream.cpp  ConsoleTable.cpp  ConsoleWindow.cpp  core_console_table.cpp  core_console_window.cpp
coretest/cmake/: CMakeLists.txt
coretest/include/: coretest.hpp
coretest/src/: BaseIntegerTest.cpp  ConcatenateTest.cpp  coretest.cpp
doc/: QSIM Configuration.docx  doc
googletest/cmake/: CMakeLists.txt  googletest.cmake
include/comms/qcom/: qcom_broadcast_seek.hpp  qcom_egm_config_req.hpp  qcom_game_config.hpp
include/core/: core.hpp  core_config.hpp  core_console.hpp  core_thread.hpp  core_types.hpp  core_utils.hpp  core_window.hpp
include/core/console/: core_console_printer.hpp  core_console_stream.hpp
include/simulator/: action.hpp  cmd_parser.hpp  line_reader.hpp  qcom_action.hpp  qcom_action_factory.hpp
pdcurses/cmake/: CMakeLists.txt
pdcurses/pdcurses/x11/: configure  pdcurses.cmake.in
rapidjson/cmake/: rapidjson.cmake
simulator/cmake/: CMakeLists.txt
simulator/include/: Action.hpp  ActionCenter.hpp  ActionFactory.hpp  ActionOptions.hpp  CmdCompletion.hpp  CmdParser.hpp  LineReader.hpp  Predeclare.hpp  QcomAction.hpp  QcomActionFactory.hpp  QcomSimulator.hpp  SimUtils.hpp  Simulator.hpp  action.hpp  action_center.hpp  predeclare.hpp  qcom_simulator.hpp  simulator.hpp  utils.hpp
simulator/src/: Action.cpp  ActionCenter.cpp  ActionFactory.cpp  CmdCompletion.cpp  CmdParser.cpp  LineReader.cpp  Main.cpp  QcomAction.cpp  QcomActionFactory.cpp  QcomSimulator.cpp  SimUtils.cpp  Simulator.cpp  action.cpp  action_factory.cpp  main.cpp  qcom_action_factory.cpp  qcom_simulator.cpp  utils.cpp
src/comms/: comms.cpp
src/comms/qcom/: qcom_general_status.cpp
src/comms/qcom/qogr/: qogr_crc.c
src/core/: core.cpp  core_timer.cpp  core_utils.cpp
src/core/console/: core_console_printer.cpp  core_console_progress_bar.cpp  core_console_stream.cpp
src/simulator/: action.cpp  action_center.cpp  line_reader.cpp  qcom_action.cpp  simulator.cpp
src/test/: test_main.cpp
src/test/simulator/: action_factory_test.cpp  action_test.cpp
